--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "type": "module",
   "module": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "build": "rollup -c",
+    "dev": "rollup -c --watch --configPlugin typescript",
+    "lint": "eslint ./src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "entities": "~3.0.1",
@@ -17,13 +16,25 @@
     "punycode": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@rollup/plugin-alias": "^5.0.1",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@types/linkify-it": "^3.0.4",
     "@types/mdurl": "^1.0.4",
     "@types/node": "^20.8.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "esbuild": "^0.19.5",
     "eslint": "^8.45.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "rollup": "^4.1.4",
+    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-esbuild": "^6.1.0",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "typescript": "^5.2.2"
   }
 }
