--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,10 @@
   "include": [
     "src/**/*.ts"
   ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ],
   "references": [
     {
       "path": "./tsconfig.node.json"
