--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
    "types": "./dist/index.d.ts",
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c --watch --configPlugin typescript",
+    "dev": "rollup -c --watch",
     "lint": "eslint ./src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
