--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "exports": {
     "require": "./dist/index.js",
     "import": "./dist/index.umd.mjs"
-   },
-   "types": "./dist/index.d.ts",
+  },
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c --watch",
-    "lint": "eslint ./src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint ./src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test": "tsc && node index.js"
   },
   "dependencies": {
     "entities": "~3.0.1",
     "linkify-it": "^4.0.1",
     "mdurl": "^1.0.1",
-    "punycode": "^2.3.0"
+    "punycode": "^2.3.0",
+    "uc.micro": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
@@ -39,6 +41,6 @@
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-esbuild": "^6.1.0",
     "rollup-plugin-typescript2": "^0.36.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.0.2"
   }
 }
