--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "esbuild": "^0.19.5",
     "eslint": "^8.45.0",
+    "eslint-define-config": "^1.24.1",
     "rollup": "^4.1.4",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-esbuild": "^6.1.0",
